--- a/css/styles.css
+++ b/css/styles.css
@@ -825,6 +825,28 @@ body.glass-bg {
 }
 
 /* Video Intro */
+#start-button-overlay {
+    position: fixed;
+    z-index: 99999;
+    top: 0; left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#start-button {
+    font-size: 2rem;
+    padding: 1rem 2rem;
+    border: none;
+    background: #0ff;
+    color: black;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
 #video-intro {
     position: fixed;
     top: 0;
@@ -840,3 +862,6 @@ body.glass-bg {
     height: 100%;
     object-fit: cover;
 }
+
+
+
